Knexus ITM TAD Changelog
Produced by Damask Holdings


VERSIONING SCHEME

V KR (Knexus Research) X.Y.Z
X = External entity release
Y = Paralax Release
Z = Internal versioning

V KR 1.8.12 (11/20 week begin)
=======================
> Probability death triss calculated
> Fixed driver and montecarlo sim outputting errors in superlow rollout numbers
> Added Knexus jedi tester script

V KR 1.7.11 (11/13 week begin)
========================
> TA1 client incorperated
> Burn death and burn suffocation are sepearated, so that a nasopharengeal airway decreases asphyxiation chances in
  burn victims now.
> Updated justifications

V KR 1.6.10 (Veterans day week)
=========================
> Added genericized metrics instead of mass casualty specific as default flag
> Sorting of metrics by damage per second (deterioration per second?)


V KR 1.5.9 (11/6 BOW)
=========================
> Updated justifications to use morbidity/bleedout
> Updated command line args for knexus branches to see reduced output
> Updated TMNT/Simple scene drivers to be compatible with TA3 state changes
> Fixed delta in metric glitch from incorrect parameter order
> Future state is now average of future states in mc analyzer, not most likely state
> Added Eye Trauma injury
> Fixed typo


V KR 1.5.8 (10/27 EOW)
=========================
> Updated Medical simulator. Major change provides much more accurate values for reasoning
> Legacy keys remian, but new helpful keys include: MEDSIM_P_DEATH, MEDSIM_P_BLEEDOUT, MEDSIM_P_ASPHYXIA,
  EST_BLOOD_LOSS, EST_LUNG_LOSS, as well as the HIGHEST version of all of these
> Major refactoring of med simulator
> Added flag to tad_tester to turn off output from kdma estimator with decision_verbose flag (left extended output on for now)

V KR 1.4.7 (10/23 BOW)
=========================
> Added in justification about injuries and overall scene



V KR 1.3.5 (10/18 midweek patch)
=========================
> Major rewrite of Monte Carlo Analyzer class: